Задача Lambdas. Исправления 16.03